# APPV4

./: .gitignore  ADVANCED_FIXES_APPLIED.txt  AGENTS.md  ALL_FIXES_APPLIED.txt  APPSIERRA_FIXES.md  ARCHITECTURAL_IMPROVEMENTS.md  ARCHITECTURE_DOCUMENTATION.md  ARCHITECTURE_IMPROVEMENTS.md  ARCHITECTURE_REBUILD_PLAN.md  AUDIT_SUMMARY.md  BALANCE_AND_POSITION_FIX.md  BALANCE_DEBUG_GUIDE.md  BALANCE_ISSUE_FIXED.md  BALANCE_ISSUE_SUMMARY.md  BALANCE_RESET_ISSUE_FOUND.md  CHECK_CURRENT_STATE.md  CLAUDE_WORKFLOW.md  CLEANUP_AND_OPTIMIZATION.md  CLEANUP_AUDIT_REPORT.md  CLEANUP_COMPLETE.md  CLEANUP_EXECUTION_REPORT.md  CODEBASE_ARCHITECTURE.md  COMPLETED_FIXES.md  COMPREHENSIVE_REDUNDANCY_AUDIT.md  CORE_AUDIT.md  DATA_SEPARATION_ARCHITECTURE.md  DEBUGGING_PANEL_UPDATES.md  DEBUG_CHANGES_SUMMARY.txt  DEBUG_COMMISSION_ISSUE.txt  DEBUG_DTC_MESSAGES.py  DEBUG_OUTPUT_EXPECTED.md  DEBUG_PNL_COMPREHENSIVE.py  DEBUG_PNL_GUIDE.md  DEBUG_QUICKSTART.md  DEBUG_TRADE_FLOW.py  DEVELOPMENT_SETUP.md  DIAGNOSTIC_FILES.md  DIAGNOSTIC_RESULTS.txt  DIRECTORY_AUDIT_REPORT.md  DOCUMENTATION_INDEX.md  (+218 more)
.claude/: settings.local.json
Audit/: FullAudit.ps1
alembic/: README  __init__.py  env.py  script.py.mako
config/: config.json  debug_policies.yml  feature_flags.py  phantom_positions.json  settings.py  theme.py  theme_backup_v1.py  theme_schema.py  trading_specs.py
core/: __init__.py  app_manager.py  app_state.py  async_message_processor.py  circuit_breaker.py  data_bridge.py  diagnostics.py  dtc_client_protected.py  dtc_parser.py  graph_diagnostics.py  interfaces.py  message_router.py  message_router_modern.py  persistence.py  session_replay.py  signal_bus.py  sim_balance.py  startup_diagnostics.py  state_manager.py
core/app_manager/: DECOMPOSITION_PLAN.md  DECOMPOSITION_SUMMARY.md  __init__.py  dtc_manager.py  signal_coordinator.py  theme_manager.py  ui_builder.py  window.py
data/: __init__.py  db_engine.py  position_repository.py  run_migration.py  runtime_state_panel1_LIVE_default.json  runtime_state_panel1_SIM_default.json  runtime_state_panel2.json  runtime_state_panel2_LIVE_.json  runtime_state_panel2_SIM_.json  runtime_state_panel2_SIM_Sim1.json  schema.py  sim_balance.json  snapshot.csv
data/migrations/: add_efficiency_column.sql
demos/: README.md  demo_test_failure.py  demo_test_run.py  demo_theme_switching.py
docs/: DEBUG_MODE_GUIDE.md  DEBUG_SUBSYSTEM.md  DTC_COMPLETE_MESSAGE_MAP.md  DTC_DISCOVERY_TOOLS.md  DTC_MESSAGE_REFERENCE.md  MODE_FILTERING_GUIDE.md  PANEL_CONTRACT.md  SYMBOL_UTILS_API.md  signal_audit_baseline.md
domain/: __init__.py  events.py  position.py
examples/: debug_integration_example.py
fixtures/: __init__.py
logs/: app.log.1  app.log.2
panels/: __init__.py  panel1.py  panel1.py.tmp  panel1_old.py  panel1_original_backup.py  panel2.py  panel2_backup_before_extraction.py  panel2_original_backup.py  panel3.py
panels/panel1/: DECOMPOSITION_PLAN.md  __init__.py  animations.py  balance_display.py  balance_panel.py  database_integration.py  equity_chart.py  equity_graph.py  equity_state.py  header_display.py  helpers.py  hover_handler.py  masked_frame.py  panel1_main.py  pnl_calculator.py  pnl_manager.py  state_persistence.py  timeframe_manager.py  timeframe_pills.py
panels/panel1_new/: widgets.py
panels/panel2/: DECOMPOSITION_PLAN.md  __init__.py  bracket_orders.py  chart_integration.py  csv_feed_handler.py  helpers.py  live_panel.py  metrics_calculator.py  metrics_updater.py  order_flow.py  panel2_main.py  pnl_display.py  (+7 more)
reports/: config_integrity.json  folder_stats.txt
services/: README_DTC_LEDGER.md  __init__.py  balance_service.py  dtc_constants.py  dtc_ledger.py  dtc_protocol.py  dtc_report_cli.py  dtc_schemas.py  live_state.py  market_data_service.py  position_recovery.py  position_service.py  stats_service.py  trade_close_service.py  trade_constants.py  trade_logger.py  trade_math.py  trade_metrics.py  trade_service.py  trade_state_machine.py  trade_store.py  unified_balance_manager.py
tests/: README_TESTS.md  README_TEST_SUITE.md  __init__.py  conftest.py  manual_test_mode_signals.py  manual_test_symbol_utils.py  python test_graph_debug.py  test_dtc_probe.py  test_dtc_schemas.py  test_integration.py  test_mode_routing.py  test_panel1_comprehensive.py  test_panel1_integration.py  test_panel2_comprehensive.py  test_panel3_comprehensive.py  test_panels.py  test_performance_and_signals.py  test_schema_integrity.py  test_schema_integrity_standalone.py  test_state_manager.py  test_state_manager_v2_fixes.py  test_stats_calculations.py  test_theme_consistency.py  test_theme_drift.py  test_theme_import_warnings.py  test_theme_integrity.py  test_thread_safety.py  test_thread_safety_standalone.py  test_trade_metrics.py
tools/: AUDIT_GUIDE.md  __init__.py  _common.py  analyze_file_structure.py  changelog_builder.py  code_cleanup.py  config_integrity.py  database_setup.py  diagnose_order_update_301.py  dtc_discovery.py  dtc_probe.py  dtc_test_framework.py  metrics_exporter.py  panel1_manual_checks.py  persistence_monitor.py  poetry_audit.py  render_timer.py  router_diagnostic.py  run_code_audit.py  schema_validator.py  show_panel_status.py  signal_audit.py  signal_trace.py  signal_trace_orders.py  startup_profiler.py  state_diff.py  sync_theme_schema.py  test_config_integrity.py  test_schema_validator.py  test_theme_audit.py  theme_audit.py  theme_refactor.py  theme_sandbox.py --mode sim  theme_validation.py  validate_dtc_handshake.py  verify_router_fixes.py
ui/: __init__.py
utils/: archive_maintenance.py  atomic_persistence.py  color_utils.py  debug_flags.py  debug_throttle.py  error_helpers.py  format_utils.py  logger.py  mode_selector.py  order_state.py  position_state.py  qt_bridge.py  reactive_properties.py  request_timeout.py  ring_buffer.py  signal_bus.py  symbol_utils.py  theme_helpers.py  theme_mixin.py  threading.py  time_helpers.py  timeframe_helpers.py  trade_mode.py  ui_helpers.py
widgets/: __init__.py  connection_icon.py  dev_toolbar.py  live_pill.py  metric_cell.py  metric_grid.py  pill_widget.py  sharpe_bar.py  timeframe_pills.py
(+27 files in other folders)
